2005-11-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_compat.c (FormatMagickStringList): MagickExport since this
	function is used by Ch extension.
	* magick/log.c (LogMagickEventList): MagickExport since this
	function is used by Ch extension.
	* magick/utility.c (FormatStringList): MagickExport since this
	function is used by Ch extension.
	* coders/dpx.c (ReadDPXImage): Added support for dpx:swap-samples
	define in order to handle files with Cb and Cr swapped.  Fixed a
	bug in the header reading which caused some valid files to fail to
	read at all.
	(WriteDPXImage): Added support for dpx:swap-samples define in
	order to write files with Cb and Cr swapped.
	* magick/profile.c (ProfileImage): Add support for ICC CMS
	profiles in YCbCr space.

2005-10-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/svg.c (ReadSVGImage): Eliminate memory leak.

2005-10-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.h (Image): Added an orientation member to the Image
	structure to record image orientation for the DPX, and TIFF
	formats. Eventually formats which support IPTC and EXIF embedded
	profiles should be supported by the orientation member as well.

2005-10-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick/magick/magick_types.h.in: Add patch for Ch.
	* magick/command.c (TransmogrifyImage): Complete re-write of
	mogrify file handling.  Former version wrote to a temporary file
	and then moved temporary file to replace original if necessary.
	New version moves an existing writable file to a backup file with
	tilde ('~') added to end of file name, writes to the final output
	file name, and removes the backup file on success.  The new
	approach satisfies formats which embed the output name in the file
	(e.g. the DPX format) and still works when the output file exists
	and is writeable, but is in non-writeable directory.  The previous
	approach would fail if the output file exists and is writable, but