@@ -8,7 +8,10 @@
 // Copyright.txt. You should have received a copy of Copyright.txt with this
 // package; otherwise see http://www.graphicsmagick.org/www/Copyright.html.
 
-#if defined(WIN32)
+//
+// This header file is for compilation using Visual Studio for the
+// WIN32 target environment.
+//
 
 // GraphicsMagick build feature configuration.  Please note that
 // disabling a feature via this header file may not be sufficient to
@@ -181,4 +184,3 @@
 //
 #define HAVE_SYS_TYPES_H 1
 
-#endif // WIN32
