@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2005-11-14  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> VisualMagick/magick/magick_config.h.in: Remove unnecessary test
+        for WIN32.
+
+</UL>
+<p>
 2005-11-13  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
