@@ -6,7 +6,7 @@
 	<META NAME="GENERATOR" CONTENT="StarOffice 7  (Solaris Sparc)">
 	<META NAME="CREATED" CONTENT="20020823;18090800">
 	<META NAME="CHANGEDBY" CONTENT="Bob Friesenhahn">
-	<META NAME="CHANGED" CONTENT="20050510;12564900">
+	<META NAME="CHANGED" CONTENT="20051114;15275000">
 	<META NAME="DESCRIPTION" CONTENT="GraphicsMagick is a robust collection of tools and libraries to read, write, and manipulate    an image in any of the more popular image formats including GIF, JPEG, PNG, PDF, and Photo CD.  With GraphicsMagick you can create GIFs dynamically    making it suitable for Web applications.  You can also resize, rotate,  sharpen, color reduce, or add special effects to an image and save your completed work in the same or differing image format.">
 	<META NAME="KEYWORDS" CONTENT="GraphicsMagick, Image Magick, Image Magic, PerlMagick, Perl Magick, Perl Magic, CineMagick, PixelMagick, Pixel Magic,    WebMagick, Web Magic, visualization, image processing, software     development, simulation, image, software, AniMagick, Animagic,    Magick++">
 	<STYLE>
@@ -156,7 +156,7 @@ environments via programming APIs as shown in the following table: </FONT></FONT
 		</TR>
 		<TR VALIGN=TOP>
 			<TD WIDTH=19%>
-				<P ALIGN=LEFT><A HREF="http://www.graphicsmagick.org/TclMagick/doc/" TARGET="_top">Tcl/Tk</A></P>
+				<P ALIGN=LEFT><A HREF="http://www.graphicsmagick.org/TclMagick/doc/">Tcl/Tk</A></P>
 			</TD>
 			<TD WIDTH=81%>
 				<P><FONT FACE="Verdana, Arial, Helvetica, sans-serif"><FONT SIZE=3>TclMagick
